2003-04-07  Mark McLoughlin  <mark@skynet.ie>

	* libgnomeui/gnome-icon-theme.c: (theme_lookup_icon):
	Merge the two seperate iterations of the theme's directory
	list into a single iteration.

2003-04-02  Loban A Rahman <loban@earthling.net>

	* libgnomeui/gnome-color-picker.h: Fixed bug #106154,
	  header misdocumentation.

2003-03-27  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Release 2.3.0

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-24  Narayana Pattipati <narayana.pattipati@wipro.com>

	*libgnomeui/gnome-file-entry.c (browse_clicked): Fix the problem
	application crash when Gnome File Selector widget's OK button is
	double clicked. Fixes bugzilla bug#104906

2003-03-19  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * configure.in: Added "ga" to ALL_LINGUAS.
	
2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-03-10  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "eo" to ALL_LINGUAS.

2003-03-09  Narayana Pattipati <narayana.pattipati@wipro.com>

	*libgnomeui/gnome-icon-entry.c (ientry_browse): Fix the problem 
	of Browse dialog(gnome-file-entry) being non-responsive to user 
	inputs. Fixes bugzilla bug#107255.
		
2003-03-08  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	Documentation fixes:

	* libgnomeui/gnome-client.c (gnome_client_set_discard_command): Removed
	doc string and added a comment where the true doc string can be found.
	(Namely in the corresponding templates file.)
	* doc/reference/libgnomeui-sections.txt: Inserted *Class definitions
	in the Standard sections.
	* doc/reference/libgnomeui-docs.sgml: FIXME -> Miscellaneous Widgets

2003-03-05  Anders Carlsson  <andersca@codefactory.se>

	* libgnomeui/gnome-icon-list.c:
	Don't return FALSE in pointer functions.
	#107652, reported by Morten Welinder.
	
2003-03-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
